Switch to library type
To be consistent with https://github.com/micronaut-projects/micronaut-discovery-client/pull/413 and stop requiring us to open things