@@ -1,6 +1,6 @@
 plugins {
     id("org.graalvm.buildtools.native")
-    id("io.micronaut.minimal.application")
+    id("io.micronaut.library")
     id("io.micronaut.test-resources")
 }
 
@@ -40,19 +40,6 @@ tasks.named("check") {
     }
 }
 
-def openGraalModules = [
-        "org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk",
-        "org.graalvm.nativeimage.builder/com.oracle.svm.core.configure",
-        "org.graalvm.sdk/org.graalvm.nativeimage.impl"
-]
-
 graalvmNative {
     toolchainDetection.set(false)
-    binaries {
-        all {
-            openGraalModules.each { module ->
-                jvmArgs.add("--add-exports=" + module + "=ALL-UNNAMED")
-            }
-        }
-    }
 }
